Fix gallery block toolbar overlap
Gallery block toolbars were overlapping under the site header due to a missing class header, this provides a workaround.

--- a/src/components/block-gallery/styles/editor.scss
+++ b/src/components/block-gallery/styles/editor.scss
@@ -13,6 +13,10 @@
 	}
 }
 
+.block-editor-block-contextual-toolbar {
+	display: inline-flex;
+}
+
 // Fix overflowing appender outline
 [data-type*="coblocks/gallery"] .is-appender {
 	outline-offset: -1px;
